name:                nightly
version:             2016.12.3
license:             BSD3
license-file:        LICENSE
maintainer:          hvr@gnu.org
build-type:          Simple
cabal-version:       >=1.10

-- cabal: The package nightly-2016.12.3 depends on unbuildable libraries:
-- H-0.9.0.1,
-- arbtt-0.9.0.10,
-- c2hs-0.28.1,
-- cabal-dependency-licenses-0.1.2.0,
-- gipeda-0.3.2.2,
-- hPDB-examples-1.2.0.7,
-- hackage-whatsnew-0.1.0.1,
-- hdevtools-0.1.4.1,
-- hfsevents-0.1.6,
-- hledger-api-1.0,
-- hledger-ui-1.0.5,
-- homplexity-0.4.3.4,
-- hopenpgp-tools-0.19.4,
-- intero-0.1.20,
-- ip6addr-0.5.1.4,
-- moesocks-1.0.0.41,
-- patat-0.4.4.0,
-- profiteur-0.3.0.3,
-- resolve-trivial-conflicts-0.3.2.3,
-- sandman-0.2.0.1,
-- servius-1.2.0.2,
-- skeletons-0.4.0,
-- tttool-1.6.1.3,
-- xdcc-1.1.3

library
  default-language:    Haskell2010
  build-depends:
    abstract-deque,
    abstract-par,
    AC-Vector,
    accelerate,
    accuerr,
    ace,
    acid-state,
    action-permutations,
    active,
    ad,
    adjunctions,
    adler32,
    aeson,
    aeson-better-errors,
    aeson-casing,
    aeson-compat,
    aeson-extra,
    aeson-generic-compat,
    aeson-injector,
    aeson-lens,
    aeson-pretty,
    aeson-qq,
    aeson-utils,
    airship,
    alarmclock,
    alex,
    amqp,
    annotated-wl-pprint,
    anonymous-sums,
    ansi-terminal,
    ansi-wl-pprint,
    ansigraph,
    app-settings,
    appar,
    arithmoi,
    array-memoize,
    arrow-list,
    ascii-progress,
    asciidiagram,
    asn1-encoding,
    asn1-parse,
    asn1-types,
    async,
    async-dejafu,
    atom-basic,
    atom-conduit,
    atomic-primops,
    atomic-write,
    attoparsec,
    attoparsec-binary,
    attoparsec-expr,
    authenticate,
    authenticate-oauth,
    auto,
    auto-update,
    autoexporter,
    avers,
    avers-api,
    avers-api-docs,
    avers-server,
    avwx,
    b9,
    bake,
    bank-holidays-england,
    base-compat,
    base-noprelude,
    base-orphans,
    base-prelude,
    base-unicode-symbols,
    base16-bytestring,
    base32string,
    base58string,
    base64-bytestring,
    base64-string,
    basic-prelude,
    bcrypt,
    benchpress,
    bencode,
    bento,
    bifunctors,
    bimap,
    bimap-server,
    binary-bits,
    binary-conduit,
    binary-ieee754,
    binary-list,
    binary-orphans,
    binary-parser,
    binary-parsers,
    binary-search,
    binary-tagged,
    binary-typed,
    bindings-DSL,
    bindings-GLFW,
    bindings-libzip,
    bioace,
    bioalign,
    biocore,
    biofasta,
    biofastq,
    biopsl,
    bitarray,
    bitcoin-block,
    bitcoin-script,
    bitcoin-tx,
    bitcoin-types,
    bits,
    bitx-bitcoin,
    blake2,
    blank-canvas,
    BlastHTTP,
    blastxml,
    blaze-bootstrap,
    blaze-builder,
    blaze-html,
    blaze-markup,
    blaze-svg,
    blaze-textual,
    bloodhound,
    blosum,
    bmp,
    Boolean,
    boolean-like,
    boolsimplifier,
    boomerang,
    both,
    BoundedChan,
    boundingboxes,
    bower-json,
    boxes,
    brick,
    broadcast-chan,
    bson,
    bson-lens,
    btrfs,
    buffer-builder,
    bumper,
    bv,
    byteable,
    bytedump,
    byteorder,
    bytes,
    byteset,
    bytestring-builder,
    bytestring-conversion,
    bytestring-handle,
    bytestring-lexing,
    bytestring-progress,
    bytestring-tree-builder,
    bytestring-trie,
    bzlib,
    bzlib-conduit,
    Cabal,
    cabal-file-th,
    cabal-install,
    cabal-rpm,
    cabal-sort,
    cabal-src,
    cabal2nix,
    cache,
    cacophony,
    cairo,
    call-stack,
    camfort,
    carray,
    cartel,
    case-insensitive,
    cased,
    cases,
    cassava,
    cassava-conduit,
    cassava-megaparsec,
    cassette,
    cayley-client,
    cereal,
    cereal-conduit,
    cereal-text,
    cereal-vector,
    cgi,
    ChannelT,
    charset,
    charsetdetect-ae,
    Chart,
    Chart-cairo,
    Chart-diagrams,
    chart-unit,
    ChasingBottoms,
    cheapskate,
    cheapskate-highlight,
    cheapskate-lucid,
    check-email,
    checkers,
    chell,
    chunked-data,
    cipher-aes,
    cipher-aes128,
    cipher-blowfish,
    cipher-camellia,
    cipher-des,
    cipher-rc4,
    circle-packing,
    clang-pure,
    clash-lib,
    clash-prelude,
    clash-systemverilog,
    clash-verilog,
    clash-vhdl,
    classy-prelude,
    classy-prelude-conduit,
    classy-prelude-yesod,
    clay,
    clckwrks,
    clckwrks-cli,
    clckwrks-plugin-media,
    clckwrks-plugin-page,
    clckwrks-theme-bootstrap,
    cli,
    clientsession,
    Clipboard,
    clock,
    clock-extras,
    clumpiness,
    ClustalParser,
    clustering,
    cmark,
    cmark-highlight,
    cmark-lucid,
    cmdargs,
    code-builder,
    code-page,
    codo-notation,
    colour,
    commutative,
    comonad,
    comonad-transformers,
    comonads-fd,
    compactmap,
    composition,
    composition-extra,
    concatenative,
    concurrency,
    concurrent-output,
    concurrent-supply,
    conduit,
    conduit-combinators,
    conduit-connection,
    conduit-extra,
    conduit-iconv,
    conduit-parse,
    ConfigFile,
    configuration-tools,
    configurator,
    configurator-export,
    connection,
    console-style,
    constraints,
    consul-haskell,
    containers-unicode-symbols,
    continued-fractions,
    contravariant,
    contravariant-extras,
    control-bool,
    control-monad-free,
    control-monad-loop,
    control-monad-omega,
    converge,
    convertible,
    cookie,
    countable,
    courier,
    cpphs,
    cprng-aes,
    cpu,
    cpuinfo,
    crackNum,
    criterion,
    cron,
    crypto-api,
    crypto-api-tests,
    crypto-cipher-tests,
    crypto-cipher-types,
    crypto-numbers,
    crypto-pubkey,
    crypto-pubkey-types,
    crypto-random,
    crypto-random-api,
    cryptocipher,
    cryptohash,
    cryptohash-conduit,
    cryptohash-cryptoapi,
    cryptohash-sha256,
    cryptol,
    cryptonite,
    cryptonite-conduit,
    css-syntax,
    css-text,
    csv,
    ctrie,
    cubicbezier,
    cubicspline,
    curl,
    darcs,
    data-accessor,
    data-accessor-mtl,
    data-binary-ieee754,
    data-check,
    data-default,
    data-default-class,
    data-default-instances-containers,
    data-default-instances-dlist,
    data-default-instances-old-locale,
    data-inttrie,
    data-lens-light,
    data-memocombinators,
    data-msgpack,
    data-or,
    data-ordlist,
    data-reify,
    datasets,
    dataurl,
    DAV,
    dawg-ord,
    debian-build,
    Decimal,
    declarative,
    deepseq-generics,
    dejafu,
    dependent-map,
    dependent-sum,
    deriving-compat,
    descriptive,
    diagrams,
    diagrams-cairo,
    diagrams-canvas,
    diagrams-contrib,
    diagrams-core,
    diagrams-gtk,
    diagrams-html5,
    diagrams-lib,
    diagrams-postscript,
    diagrams-rasterific,
    diagrams-solve,
    diagrams-svg,
    dice,
    Diff,
    diff3,
    digest,
    digits,
    dimensional,
    direct-sqlite,
    directory-tree,
    discount,
    disk-free-space,
    distributed-closure,
    distributed-process,
    distributed-process-simplelocalnet,
    distributed-static,
    distribution-nixpkgs,
    distributive,
    diversity,
    djinn-ghc,
    djinn-lib,
    dlist,
    dlist-instances,
    dns,
    do-list,
    dockerfile,
    docopt,
    doctemplates,
    doctest,
    doctest-discover,
    dotenv,
    dotnet-timespan,
    double-conversion,
    download,
    dpor,
    drawille,
    DRBG,
    drifter,
    drifter-postgresql,
    dual-tree,
    dynamic-state,
    dyre,
    Earley,
    easy-file,
    Ebnf2ps,
    ed25519,
    ede,
    edit-distance,
    editor-open,
    effect-handlers,
    either,
    either-unwrap,
    ekg,
    ekg-core,
    ekg-json,
    elerea,
    elm-bridge,
    elm-core-sources,
    email-validate,
    emailaddress,
    enclosed-exceptions,
    encoding-io,
    entropy,
    enummapset-th,
    envelope,
    envparse,
    epub-metadata,
    eq,
    erf,
    errors,
    ersatz,
    etcd,
    ether,
    euphoria,
    event,
    eventstore,
    exact-combinatorics,
    exact-pi,
    exception-transformers,
    exceptional,
    exceptions,
    executable-hash,
    executable-path,
    exp-pairs,
    expiring-cache-map,
    explicit-exception,
    extensible,
    extensible-effects,
    extensible-exceptions,
    extra,
    fail,
    farmhash,
    fast-builder,
    fast-digits,
    fast-logger,
    fasta,
    fay,
    fay-base,
    fay-builder,
    fay-dom,
    fay-jquery,
    fay-text,
    fay-uri,
    fclabels,
    feature-flags,
    feed,
    FenwickTree,
    fft,
    fgl,
    fgl-arbitrary,
    file-embed,
    file-modules,
    filecache,
    filelock,
    filemanip,
    fingertree,
    fingertree-psqueue,
    fixed,
    fixed-vector,
    fixed-vector-hetero,
    flat-mcmc,
    flexible-defaults,
    flock,
    flow,
    fmlist,
    fn,
    focus,
    fold-debounce,
    fold-debounce-conduit,
    foldl,
    foldl-statistics,
    FontyFruity,
    force-layout,
    foreign-store,
    formatting,
    fortran-src,
    Frames,
    free,
    free-vl,
    freenect,
    freer,
    friendly-time,
    frisby,
    from-sum,
    frontmatter,
    fsnotify,
    fsnotify-conduit,
    funcmp,
    fuzzcheck,
    gamma,
    gd,
    Genbank,
    generic-aeson,
    generic-deriving,
    generic-xmlpickler,
    GenericPretty,
    generics-eot,
    generics-sop,
    generics-sop-lens,
    getopt-generics,
    ghc-events,
    ghc-exactprint,
    ghc-heap-view,
    ghc-paths,
    ghc-syb-utils,
    ghc-tcplugins-extra,
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,
    ghcid,
    ghcjs-codemirror,
    ghcjs-hplay,
    ghcjs-perch,
    gi-atk,
    gi-cairo,
    gi-gdk,
    gi-gdkpixbuf,
    gi-gio,
    gi-glib,
    gi-gobject,
    gi-gtk,
    gi-javascriptcore,
    gi-pango,
    gi-soup,
    gi-webkit,
    ginger,
    gio,
    giphy-api,
    github,
    github-types,
    github-webhook-handler,
    github-webhook-handler-snap,
    gitlib,
    gitlib-libgit2,
    gitlib-test,
    gitrev,
    gitson,
    gl,
    glabrous,
    GLFW-b,
    glib,
    Glob,
    glob-posix,
    gloss,
    gloss-rendering,
    GLURaw,
    GLUT,
    gogol,
    gogol-adexchange-buyer,
    gogol-adexchange-seller,
    gogol-admin-datatransfer,
    gogol-admin-directory,
    gogol-admin-emailmigration,
    gogol-admin-reports,
    gogol-adsense,
    gogol-adsense-host,
    gogol-affiliates,
    gogol-analytics,
    gogol-android-enterprise,
    gogol-android-publisher,
    gogol-appengine,
    gogol-apps-activity,
    gogol-apps-calendar,
    gogol-apps-licensing,
    gogol-apps-reseller,
    gogol-apps-tasks,
    gogol-appstate,
    gogol-autoscaler,
    gogol-bigquery,
    gogol-billing,
    gogol-blogger,
    gogol-books,
    gogol-civicinfo,
    gogol-classroom,
    gogol-cloudmonitoring,
    gogol-cloudtrace,
    gogol-compute,
    gogol-container,
    gogol-core,
    gogol-customsearch,
    gogol-dataflow,
    gogol-dataproc,
    gogol-datastore,
    gogol-debugger,
    gogol-deploymentmanager,
    gogol-dfareporting,
    gogol-discovery,
    gogol-dns,
    gogol-doubleclick-bids,
    gogol-doubleclick-search,
    gogol-drive,
    gogol-firebase-rules,
    gogol-fitness,
    gogol-fonts,
    gogol-freebasesearch,
    gogol-fusiontables,
    gogol-games,
    gogol-games-configuration,
    gogol-games-management,
    gogol-genomics,
    gogol-gmail,
    gogol-groups-migration,
    gogol-groups-settings,
    gogol-identity-toolkit,
    gogol-kgsearch,
    gogol-latencytest,
    gogol-logging,
    gogol-maps-coordinate,
    gogol-maps-engine,
    gogol-mirror,
    gogol-monitoring,
    gogol-oauth2,
    gogol-pagespeed,
    gogol-partners,
    gogol-people,
    gogol-play-moviespartner,
    gogol-plus,
    gogol-plus-domains,
    gogol-prediction,
    gogol-proximitybeacon,
    gogol-pubsub,
    gogol-qpxexpress,
    gogol-replicapool,
    gogol-replicapool-updater,
    gogol-resourcemanager,
    gogol-resourceviews,
    gogol-script,
    gogol-sheets,
    gogol-shopping-content,
    gogol-siteverification,
    gogol-spectrum,
    gogol-sqladmin,
    gogol-storage,
    gogol-storage-transfer,
    gogol-tagmanager,
    gogol-taskqueue,
    gogol-translate,
    gogol-urlshortener,
    gogol-useraccounts,
    gogol-vision,
    gogol-webmaster-tools,
    gogol-youtube,
    gogol-youtube-analytics,
    gogol-youtube-reporting,
    google-cloud,
    google-oauth2-jwt,
    GPipe,
    GPipe-GLFW,
    gpolyline,
    graph-core,
    graph-wrapper,
    graphs,
    GraphSCC,
    graphviz,
    gravatar,
    graylog,
    groom,
    grouped-list,
    groupoids,
    groups,
    gtk,
    gtk2hs-buildtools,
    gtk3,
    gtksourceview3,
    hackage-db,
    hackage-security,
    hackernews,
    haddock-api,
    haddock-library,
    hailgun,
    hailgun-simple,
    hakyll,
    half,
    hamilton,
    hamlet,
    HandsomeSoup,
    hapistrano,
    happstack-authenticate,
    happstack-clientsession,
    happstack-hsp,
    happstack-jmacro,
    happstack-server,
    happstack-server-tls,
    happy,
    harp,
    hashable,
    hashable-extras,
    hashable-time,
    hashmap,
    hashtables,
    haskeline,
    haskell-gi,
    haskell-gi-base,
    haskell-lexer,
    haskell-names,
    haskell-neo4j-client,
    haskell-packages,
    haskell-spacegoo,
    haskell-src,
    haskell-src-exts,
    haskell-src-exts-simple,
    haskell-src-meta,
    HaskellNet,
    HaskellNet-SSL,
    haskintex,
    hasql,
    hastache,
    hasty-hamiltonian,
    HaTeX,
    hatex-guide,
    hbayes,
    hbeanstalk,
    HCodecs,
    hdaemonize,
    HDBC,
    HDBC-session,
    hdocs,
    heap,
    heaps,
    hebrew-time,
    hedis,
    heist,
    heredoc,
    heterocephalus,
    hex,
    hexstring,
    hflags,
    hformat,
    hid,
    hidapi,
    hierarchical-clustering,
    highlighting-kate,
    hindent,
    hinotify,
    hint,
    histogram-fill,
    hit,
    hjsmin,
    hjsonpointer,
    hjsonschema,
    hledger,
    hledger-interest,
    hledger-lib,
    hledger-web,
    hlibgit2,
    hlibsass,
    hlint,
    hmatrix,
    hmatrix-gsl,
    hmatrix-gsl-stats,
    hmatrix-special,
    hmpfr,
    hmt,
    hoauth2,
    hocilib,
    holy-project,
    hoogle,
    hOpenPGP,
    hopenssl,
    hosc,
    hostname,
    hostname-validate,
    hourglass,
    hpack,
    hpc-coveralls,
    hPDB,
    HPDF,
    hpio,
    hpp,
    hpqtypes,
    hquantlib,
    hreader,
    hruby,
    hs-bibutils,
    hs-GeoIP,
    hsass,
    hsb2hs,
    hscolour,
    hsdev,
    hsdns,
    hse-cpp,
    hsebaysdk,
    hsemail,
    HSet,
    hset,
    hsexif,
    hsignal,
    hsinstall,
    hslogger,
    hslua,
    hsndfile,
    hsndfile-vector,
    HsOpenSSL,
    HsOpenSSL-x509-system,
    hsp,
    hspec,
    hspec-attoparsec,
    hspec-contrib,
    hspec-core,
    hspec-discover,
    hspec-expectations,
    hspec-expectations-pretty-diff,
    hspec-golden-aeson,
    hspec-jenkins,
    hspec-megaparsec,
    hspec-meta,
    hspec-setup,
    hspec-smallcheck,
    hspec-wai,
    hspec-wai-json,
    hstatistics,
    hstatsd,
    HStringTemplate,
    hsx-jmacro,
    hsx2hs,
    hsyslog,
    htaglib,
    HTF,
    html,
    html-conduit,
    html-email-validate,
    htoml,
    HTTP,
    http-api-data,
    http-client,
    http-client-openssl,
    http-client-tls,
    http-common,
    http-conduit,
    http-date,
    http-link-header,
    http-media,
    http-reverse-proxy,
    http-streams,
    http-types,
    http2,
    human-readable-duration,
    HUnit,
    HUnit-approx,
    hunit-dejafu,
    hvect,
    hw-balancedparens,
    hw-bits,
    hw-conduit,
    hw-diagnostics,
    hw-excess,
    hw-int,
    hw-parser,
    hw-prim,
    hw-rankselect,
    hw-rankselect-base,
    hw-string-parse,
    hw-succinct,
    hweblib,
    hworker,
    hxt,
    hxt-charproperties,
    hxt-css,
    hxt-http,
    hxt-pickle-utils,
    hxt-regex-xmlschema,
    hxt-unicode,
    hybrid-vectors,
    hyphenation,
    ical,
    iconv,
    identicon,
    ieee754,
    if,
    IfElse,
    ignore,
    ilist,
    imagesize-conduit,
    immortal,
    include-file,
    incremental-parser,
    indentation-core,
    indentation-parsec,
    indents,
    inflections,
    ini,
    inline-c,
    inline-c-cpp,
    inline-r,
    insert-ordered-containers,
    integration,
    interpolate,
    interpolatedstring-perl6,
    IntervalMap,
    intervals,
    invariant,
    io-choice,
    io-machine,
    io-manager,
    io-memoize,
    io-region,
    io-storage,
    io-streams,
    io-streams-haproxy,
    iproute,
    IPv6Addr,
    irc,
    irc-client,
    irc-conduit,
    irc-ctcp,
    irc-dcc,
    islink,
    iso3166-country-codes,
    iso639,
    iso8601-time,
    iterable,
    ix-shapable,
    ixset,
    ixset-typed,
    jailbreak-cabal,
    jmacro,
    jmacro-rpc,
    jmacro-rpc-happstack,
    jmacro-rpc-snap,
    jose,
    jose-jwt,
    js-flot,
    js-jquery,
    json,
    json-builder,
    json-rpc-generic,
    json-schema,
    json-stream,
    JuicyPixels,
    JuicyPixels-extra,
    JuicyPixels-scale-dct,
    jwt,
    kan-extensions,
    kansas-comet,
    katip,
    katip-elasticsearch,
    kawhi,
    kdt,
    keter,
    keycode,
    keys,
    kmeans,
    knob,
    koofr-client,
    kraken,
    lackey,
    language-c,
    language-dockerfile,
    language-ecmascript,
    language-fortran,
    language-glsl,
    language-haskell-extract,
    language-java,
    language-javascript,
    language-lua2,
    language-nix,
    language-puppet,
    language-python,
    language-thrift,
    large-hashable,
    largeword,
    lattices,
    lazy-csv,
    lca,
    leapseconds-announced,
    lens,
    lens-action,
    lens-aeson,
    lens-datetime,
    lens-family,
    lens-family-core,
    lens-family-th,
    lens-regex,
    lens-simple,
    leveldb-haskell,
    lexer-applicative,
    lhs2tex,
    libgit,
    libinfluxdb,
    libmpd,
    libnotify,
    LibZip,
    licensor,
    lift-generics,
    lifted-async,
    lifted-base,
    linear,
    linear-accelerate,
    linked-list-with-iterator,
    linux-file-extents,
    linux-namespaces,
    List,
    list-fusion-probe,
    list-prompt,
    list-t,
    ListLike,
    lmdb,
    loch-th,
    log,
    log-base,
    log-domain,
    log-elasticsearch,
    log-postgres,
    logfloat,
    logging-facade,
    logict,
    loop,
    lrucache,
    lrucaching,
    ltext,
    lucid,
    lucid-svg,
    machines,
    machines-directory,
    machines-io,
    magic,
    mainland-pretty,
    makefile,
    managed,
    mandrill,
    map-syntax,
    markdown,
    markdown-unlit,
    markup,
    math-functions,
    mathexpr,
    matrices,
    matrix,
    maximal-cliques,
    mbox,
    mcmc-types,
    median-stream,
    megaparsec,
    memory,
    MemoTrie,
    mersenne-random,
    mersenne-random-pure64,
    messagepack,
    messagepack-rpc,
    metrics,
    MFlow,
    mfsolve,
    microlens,
    microlens-aeson,
    microlens-contra,
    microlens-ghc,
    microlens-mtl,
    microlens-platform,
    microlens-th,
    mighty-metropolis,
    mime-mail,
    mime-mail-ses,
    mime-types,
    misfortune,
    missing-foreign,
    MissingH,
    mmap,
    mmorph,
    mockery,
    modify-fasta,
    monad-control,
    monad-coroutine,
    monad-extras,
    monad-http,
    monad-journal,
    monad-logger,
    monad-logger-json,
    monad-logger-prefix,
    monad-logger-syslog,
    monad-loops,
    monad-par,
    monad-par-extras,
    monad-parallel,
    monad-peel,
    monad-primitive,
    monad-products,
    monad-skeleton,
    monad-time,
    monad-unlift,
    monad-unlift-ref,
    monadcryptorandom,
    monadic-arrays,
    monadLib,
    monadloc,
    MonadPrompt,
    MonadRandom,
    monads-tf,
    mongoDB,
    mono-traversable,
    mono-traversable-instances,
    monoid-extras,
    monoid-subclasses,
    monoidal-containers,
    morte,
    mountpoints,
    mtl,
    mtl-compat,
    mtl-prelude,
    multiarg,
    multimap,
    multipart,
    multiset,
    multiset-comb,
    multistate,
    murmur-hash,
    MusicBrainz,
    mutable-containers,
    mwc-probability,
    mwc-random,
    mwc-random-monad,
    mysql,
    mysql-haskell,
    mysql-haskell-openssl,
    mysql-simple,
    nagios-check,
    names-th,
    nano-erl,
    nanospec,
    nationstates,
    nats,
    natural-sort,
    natural-transformation,
    ndjson-conduit,
    neat-interpolation,
    netpbm,
    nettle,
    netwire,
    netwire-input,
    netwire-input-glfw,
    network,
    network-anonymous-i2p,
    network-anonymous-tor,
    network-attoparsec,
    network-conduit-tls,
    network-house,
    network-info,
    network-msgpack-rpc,
    network-multicast,
    network-simple,
    network-transport,
    network-transport-composed,
    network-transport-inmemory,
    network-transport-tcp,
    network-transport-tests,
    network-uri,
    newtype,
    newtype-generics,
    next-ref,
    nicify-lib,
    NineP,
    nix-paths,
    non-empty-sequence,
    nonce,
    NoTrace,
    nsis,
    numbers,
    numeric-extras,
    NumInstances,
    numtype-dk,
    oanda-rest-api,
    objective,
    ObjectName,
    octane,
    Octree,
    oeis,
    ofx,
    old-locale,
    old-time,
    once,
    OneTuple,
    oo-prototypes,
    opaleye,
    opaleye-trans,
    open-browser,
    OpenGL,
    OpenGLRaw,
    openpgp-asciiarmor,
    opensource,
    openssl-streams,
    operational,
    operational-class,
    opml-conduit,
    optional-args,
    options,
    optparse-applicative,
    optparse-generic,
    optparse-helper,
    optparse-simple,
    optparse-text,
    osdkeys,
    overloaded-records,
    packdeps,
    pager,
    pagerduty,
    pagination,
    palette,
    pandoc,
    pandoc-citeproc,
    pandoc-types,
    pango,
    parallel,
    parallel-io,
    parseargs,
    parsec,
    ParsecTools,
    parsers,
    partial-handler,
    path,
    path-extra,
    path-io,
    path-pieces,
    pathwalk,
    patience,
    pattern-arrows,
    pcre-heavy,
    pcre-light,
    pcre-utils,
    pdf-toolbox-content,
    pdf-toolbox-core,
    pdf-toolbox-document,
    pdfinfo,
    pem,
    permutation,
    persistable-record,
    persistable-types-HDBC-pg,
    persistent,
    persistent-mysql,
    persistent-postgresql,
    persistent-redis,
    persistent-refs,
    persistent-sqlite,
    persistent-template,
    pgp-wordlist,
    phantom-state,
    picedit,
    picoparsec,
    pid1,
    pinboard,
    pinch,
    pinchot,
    pipes,
    pipes-attoparsec,
    pipes-bytestring,
    pipes-cacophony,
    pipes-concurrency,
    pipes-csv,
    pipes-extras,
    pipes-fastx,
    pipes-group,
    pipes-mongodb,
    pipes-network,
    pipes-parse,
    pipes-random,
    pipes-safe,
    pipes-text,
    pipes-wai,
    pixelated-avatar-generator,
    pkcs10,
    placeholders,
    plan-b,
    plot,
    plot-gtk,
    plot-gtk3,
    point-octree,
    pointed,
    pointedlist,
    pointful,
    pointless-fun,
    polynomials-bernstein,
    polyparse,
    posix-realtime,
    post-mess-age,
    postgresql-binary,
    postgresql-libpq,
    postgresql-schema,
    postgresql-simple,
    postgresql-simple-url,
    postgresql-transactional,
    pqueue,
    pred-set,
    prednote,
    prefix-units,
    prelude-extras,
    prelude-safeenum,
    preprocessor-tools,
    presburger,
    pretty-class,
    pretty-hex,
    pretty-show,
    pretty-types,
    prettyclass,
    primes,
    primitive,
    process-extras,
    product-profunctors,
    profunctor-extras,
    profunctors,
    project-template,
    projectroot,
    prometheus-client,
    prometheus-metrics-ghc,
    prompt,
    protobuf,
    protobuf-simple,
    protocol-buffers,
    protocol-buffers-descriptor,
    protolude,
    proxied,
    psql-helpers,
    PSQueue,
    psqueues,
    publicsuffix,
    pugixml,
    pure-cdb,
    pure-io,
    pureMD5,
    purescript-bridge,
    pusher-http-haskell,
    pwstore-fast,
    pwstore-purehaskell,
    quantum-random,
    QuasiText,
    questioner,
    quickbench,
    QuickCheck,
    quickcheck-arbitrary-adt,
    quickcheck-assertions,
    quickcheck-combinators,
    quickcheck-instances,
    quickcheck-io,
    quickcheck-properties,
    quickcheck-simple,
    quickcheck-special,
    quickcheck-text,
    quickcheck-unicode,
    rainbow,
    rainbox,
    random,
    random-fu,
    random-shuffle,
    random-source,
    random-tree,
    range,
    range-set-list,
    rank1dynamic,
    Rasterific,
    rasterific-svg,
    ratel,
    ratel-wai,
    rattletrap,
    raw-strings-qq,
    rawfilepath,
    rawstring-qm,
    rdf,
    read-editor,
    read-env-var,
    readable,
    ReadArgs,
    readline,
    recursion-schemes,
    redis-io,
    redis-resp,
    reducers,
    reedsolomon,
    ref-fd,
    refact,
    reflection,
    reform,
    reform-blaze,
    reform-hamlet,
    reform-happstack,
    reform-hsp,
    RefSerialize,
    regex-applicative,
    regex-applicative-text,
    regex-base,
    regex-compat,
    regex-compat-tdfa,
    regex-pcre,
    regex-pcre-builtin,
    regex-posix,
    regex-tdfa,
    regex-tdfa-text,
    reinterpret-cast,
    relational-query,
    relational-query-HDBC,
    relational-record,
    relational-schemas,
    renderable,
    RepLib,
    req,
    req-conduit,
    reroute,
    resource-pool,
    resourcet,
    rest-client,
    rest-core,
    rest-gen,
    rest-happstack,
    rest-snap,
    rest-stringmap,
    rest-types,
    rest-wai,
    result,
    rethinkdb,
    rethinkdb-client-driver,
    retry,
    rev-state,
    rfc5051,
    rng-utils,
    rose-trees,
    rotating-log,
    RSA,
    rss-conduit,
    runmemo,
    rvar,
    s3-signer,
    safe,
    safe-exceptions,
    safecopy,
    SafeSemaphore,
    sampling,
    sandi,
    say,
    sbv,
    scalpel,
    scanner,
    scientific,
    scotty,
    scrypt,
    sdl2,
    securemem,
    SegmentTree,
    semigroupoid-extras,
    semigroupoids,
    semigroups,
    semiring-simple,
    semver,
    sendfile,
    seqalign,
    seqloc,
    serf,
    servant,
    servant-aeson-specs,
    servant-auth-cookie,
    servant-blaze,
    servant-cassava,
    servant-client,
    servant-docs,
    servant-foreign,
    servant-js,
    servant-JuicyPixels,
    servant-lucid,
    servant-mock,
    servant-purescript,
    servant-server,
    servant-subscriber,
    servant-swagger,
    servant-swagger-ui,
    servant-yaml,
    serversession,
    serversession-backend-acid-state,
    serversession-frontend-wai,
    serversession-frontend-yesod,
    set-monad,
    setenv,
    setlocale,
    sets,
    SHA,
    shake,
    shake-language-c,
    shakespeare,
    shell-conduit,
    ShellCheck,
    shelly,
    shortcut-links,
    should-not-typecheck,
    show-prettyprint,
    sibe,
    signal,
    silently,
    simple,
    simple-download,
    simple-log,
    simple-reflect,
    simple-sendfile,
    simple-session,
    simple-smt,
    simple-templates,
    singleton-bool,
    singletons,
    siphash,
    skein,
    slave-thread,
    slug,
    smallcaps,
    smallcheck,
    smoothie,
    smtLib,
    smtp-mail,
    snap,
    snap-core,
    snap-server,
    snaplet-fay,
    snowflake,
    soap,
    soap-openssl,
    soap-tls,
    socket,
    socks,
    solga,
    solga-swagger,
    sorted-list,
    sourcemap,
    sparse-linear-algebra,
    spdx,
    speculation,
    speedy-slice,
    sphinx,
    Spintax,
    splice,
    split,
    Spock,
    Spock-api,
    Spock-api-server,
    Spock-core,
    Spock-lucid,
    Spock-worker,
    spool,
    spoon,
    sql-words,
    sqlite-simple,
    sqlite-simple-errors,
    srcloc,
    stache,
    state-plus,
    stateref,
    statestack,
    StateVar,
    stateWriter,
    static-canvas,
    statistics,
    stb-image-redux,
    stemmer,
    stm,
    stm-chans,
    stm-conduit,
    stm-containers,
    stm-delay,
    stm-stats,
    stm-supply,
    stopwatch,
    storable-complex,
    storable-endian,
    storable-record,
    Strafunski-StrategyLib,
    stratosphere,
    streaming,
    streaming-bytestring,
    streaming-commons,
    streamproc,
    streams,
    strict,
    strict-base-types,
    string-class,
    string-combinators,
    string-conv,
    string-conversions,
    string-qq,
    stringable,
    stringbuilder,
    stringsearch,
    strive,
    stylish-haskell,
    success,
    sundown,
    superbuffer,
    svg-builder,
    svg-tree,
    SVGFonts,
    swagger2,
    syb,
    syb-with-class,
    symengine,
    system-argv0,
    system-fileio,
    system-filepath,
    system-posix-redirect,
    syz,
    tabular,
    tagged,
    tagged-binary,
    tagged-identity,
    taggy,
    taggy-lens,
    tagshare,
    tagsoup,
    tagstream-conduit,
    tar,
    tar-conduit,
    tardis,
    tasty,
    tasty-ant-xml,
    tasty-dejafu,
    tasty-discover,
    tasty-expected-failure,
    tasty-golden,
    tasty-hspec,
    tasty-html,
    tasty-hunit,
    tasty-kat,
    tasty-program,
    tasty-quickcheck,
    tasty-rerun,
    tasty-silver,
    tasty-smallcheck,
    tasty-th,
    TCache,
    tce-conf,
    tcp-streams,
    tcp-streams-openssl,
    template,
    temporary,
    temporary-rc,
    terminal-progress-bar,
    terminal-size,
    terminfo,
    test-fixture,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2,
    test-framework-smallcheck,
    test-framework-th,
    test-simple,
    testing-feat,
    texmath,
    text,
    text-all,
    text-binary,
    text-conversions,
    text-format,
    text-icu,
    text-ldap,
    text-manipulate,
    text-metrics,
    text-postgresql,
    text-region,
    text-show,
    text-show-instances,
    text-zipper,
    textlocal,
    tf-random,
    th-data-compat,
    th-desugar,
    th-expand-syns,
    th-extras,
    th-lift,
    th-lift-instances,
    th-orphans,
    th-printf,
    th-reify-compat,
    th-reify-many,
    th-to-exp,
    these,
    threads,
    through-text,
    thumbnail-plus,
    thyme,
    tidal,
    time-compat,
    time-lens,
    time-locale-compat,
    time-parsers,
    timeit,
    timelens,
    timemap,
    timerep,
    timezone-olson,
    timezone-series,
    tinylog,
    tinytemplate,
    titlecase,
    tls,
    tls-debug,
    token-bucket,
    tostring,
    tracy,
    transformers-base,
    transformers-compat,
    transformers-lift,
    transient,
    transient-universe,
    traverse-with-class,
    tree-fun,
    tries,
    trifecta,
    true-name,
    ttrie,
    tuple,
    tuple-th,
    tuples-homogenous-h98,
    turtle,
    twitter-feed,
    type-aligned,
    type-assertions,
    type-eq,
    type-fun,
    type-level-kv-list,
    type-level-numbers,
    type-list,
    type-operators,
    type-spec,
    typed-process,
    typelits-witnesses,
    typography-geometry,
    tz,
    tzdata,
    ua-parser,
    uglymemo,
    unbound,
    unbound-generics,
    unbounded-delays,
    uncertain,
    unexceptionalio,
    unfoldable,
    unfoldable-restricted,
    unicode-show,
    unicode-transforms,
    unification-fd,
    union,
    union-find,
    uniplate,
    Unique,
    unit-constraint,
    units,
    units-defs,
    units-parser,
    universe,
    universe-base,
    universe-instances-base,
    universe-instances-extended,
    universe-instances-trans,
    universe-reverse-instances,
    unix-bytestring,
    unix-compat,
    unix-time,
    Unixutils,
    unordered-containers,
    uri-bytestring,
    uri-encode,
    url,
    urlpath,
    userid,
    users,
    users-postgresql-simple,
    users-test,
    utf8-light,
    utf8-string,
    utility-ht,
    uu-interleaved,
    uu-parsinglib,
    uuid,
    uuid-orphans,
    uuid-types,
    vado,
    validate-input,
    varying,
    vault,
    vcswrapper,
    vector,
    vector-algorithms,
    vector-binary-instances,
    vector-buffer,
    vector-fftw,
    vector-instances,
    vector-sized,
    vector-space,
    vector-split,
    vector-th-unbox,
    vectortiles,
    versions,
    vhd,
    ViennaRNAParser,
    vinyl,
    vinyl-utils,
    void,
    vty,
    wai,
    wai-app-static,
    wai-conduit,
    wai-cors,
    wai-eventsource,
    wai-extra,
    wai-handler-launch,
    wai-logger,
    wai-middleware-caching,
    wai-middleware-caching-lru,
    wai-middleware-caching-redis,
    wai-middleware-consul,
    wai-middleware-crowd,
    wai-middleware-metrics,
    wai-middleware-prometheus,
    wai-middleware-static,
    wai-middleware-throttle,
    wai-predicates,
    wai-request-spec,
    wai-session,
    wai-session-postgresql,
    wai-transformers,
    wai-websockets,
    waitra,
    warp,
    warp-tls,
    wavefront-obj,
    web-plugins,
    web-routes,
    web-routes-boomerang,
    web-routes-happstack,
    web-routes-hsp,
    web-routes-th,
    web-routes-wai,
    webkitgtk3,
    webkitgtk3-javascriptcore,
    webpage,
    webrtc-vad,
    websockets,
    websockets-snap,
    weigh,
    wikicfp-scraper,
    wild-bind,
    wild-bind-indicator,
    wild-bind-task-x11,
    wild-bind-x11,
    Win32,
    Win32-extras,
    Win32-notify,
    wire-streams,
    with-location,
    withdependencies,
    witherable,
    wizards,
    wl-pprint,
    wl-pprint-annotated,
    wl-pprint-console,
    wl-pprint-extras,
    wl-pprint-terminfo,
    wl-pprint-text,
    word-trie,
    word24,
    word8,
    wordpass,
    Workflow,
    wrap,
    writer-cps-mtl,
    writer-cps-transformers,
    wuss,
    X11,
    x509,
    x509-store,
    x509-system,
    x509-validation,
    Xauth,
    xdg-basedir,
    xenstore,
    xhtml,
    xlsior,
    xlsx,
    xlsx-tabular,
    xml,
    xml-conduit,
    xml-conduit-parse,
    xml-conduit-writer,
    xml-hamlet,
    xml-lens,
    xml-picklers,
    xml-to-json-fast,
    xml-types,
    xmlgen,
    xmlhtml,
    xmonad,
    xss-sanitize,
    yackage,
    yahoo-finance-api,
    yaml,
    Yampa,
    YampaSynth,
    yes-precure5-command,
    yesod,
    yesod-auth,
    yesod-auth-account,
    yesod-auth-basic,
    yesod-auth-hashdb,
    yesod-bin,
    yesod-core,
    yesod-eventsource,
    yesod-fay,
    yesod-form,
    yesod-form-richtext,
    yesod-gitrepo,
    yesod-gitrev,
    yesod-newsfeed,
    yesod-persistent,
    yesod-sitemap,
    yesod-static,
    yesod-static-angular,
    yesod-table,
    yesod-test,
    yesod-websockets,
    yi-rope,
    yjtools,
    zero,
    zeromq4-haskell,
    zip,
    zip-archive,
    zippers,
    zlib,
    zlib-bindings,
    zlib-lens,
    zot
